<resources>
    <string name="app_name">Foods</string>
    <string name="view">View</string>
    <string name="where_to">Where to ?</string>
    <string name="select_city">Select City</string>
    <string name="search_city">Input a city</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_date">Enter Date</string>
    <string name="create_trip">Create Trip</string>
    <string name="create_a_trip">Create a Trip</string>
    <string name="create_a_trip_sub">Let\'s Go! Build Your Next Adventure</string>
    <string name="name">Name</string>
    <string name="select_category">Select Categories</string>
    <string name="tags">Tags</string>
    <string name="calories">Calories</string>
    <string name="category">Category</string>
    <string name="enter_calories">Enter number of calories</string>
    <string name="enter_food_name">Enter food name</string>
    <string name="enter_food_desc">Enter food description</string>
    <string name="travel_style">Travel Style</string>
    <string name="select_travel_style">Select your travel style</string>
    <string name="description">Description</string>
    <string name="trip_description_sub">Tell us more about the trip</string>
    <string name="plan_a_trip">Plan a Trip</string>
    <string name="trip_collaboration">Trip Collaboration</string>
    <string name="share_trip">Share Trip</string>
    <string name="activities">Activities</string>
    <string name="add_activities">Add Activities</string>
    <string name="activities_sub">Build, personalize, and optimize your itineraries with our trip planner.</string>
    <string name="hotel">Hotels</string>
    <string name="add_hotel">Add Hotels</string>
    <string name="flight">Flights</string>
    <string name="add_flight">Add Flights</string>
    <string name="trip_itineraries">Trip itineraries</string>
    <string name="trip_itineraries_sub">Your trip itineraries are placed here</string>
    <string name="no_request">No request yet</string>
    <string name="rating_num">8.5 (436)</string>
    <string name="change_time"><u>Change time</u></string>
    <string name="time">10:30 AM on Mar 19</string>
    <string name="day_one_activity">Day 1 (Activity 1)</string>
    <string name="flight_details">Flight details</string>
    <string name="hotel_details">Hotel details</string>
    <string name="price_details">Price details</string>
    <string name="edit_details">Edit details</string>
    <string name="remove">Remove</string>
    <string name="show_in_map">Show in map</string>
    <string name="in">In:</string>
    <string name="out">Out:</string>
    <string name="america_airline">America Airlines</string>
    <string name="america_airline_code">AA-829</string>
    <string name="date">Sun, 20 Aug</string>
    <string name="date_text">Date</string>
    <string name="where">Where</string>
    <string name="p_select_city">Please select a city</string>
    <string name="los">LOS</string>
    <string name="sin">SIN</string>
    <string name="direct">Direct</string>
    <string name="plan_dream_trip">Plan Your Dream Trip in Minutes</string>
    <string name="plan_dream_trip_sub">Build, personalize, and optimize your itineraries with our trip planner. Perfect for getaways, remote workcations, and any spontaneous escapade.</string>
    <string name="your_trips">Your Trips</string>
    <string name="your_trips_sub">Your trip itineraries and  planned trips are placed here</string>
    <string name="planned_trips">Planned Trips</string>
    <string name="five_days">5 Days</string>
    <string name="choose_date">Choose Date</string>
    <string name="loading">Loading…</string>
    <string name="hey_lucy">Hey there, Lucy!</string>
    <string name="excited">Are you excited to create a tasty dish today?</string>
    <string name="instruction">Press enter once you\'ve typed a tag.</string>
    <string name="search_foods">Search foods…</string>
    <string name="all">All</string>
    <string name="morning_feast">Morning Feast</string>
    <string name="sunrise_meal">Sunrise Meal</string>
    <string name="dawn_delicacies">Dawn Delicacies</string>
    <string name="all_food">All Foods</string>
    <string name="take_photo">Take photo</string>
    <string name="upload">Upload</string>
    <string name="home">Home</string>
    <string name="generator">Generator</string>
    <string name="add">Add</string>
    <string name="add_food">Add Food</string>
    <string name="add_new_food">Add new food</string>
    <string name="favorite">Favorite</string>
    <string name="planner">Planner</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="authority">com.ayoolamasha.gopaddi.fileprovider</string>
    <string name="upload_image">Upload Image\n</string>
    <string name="upload_profile_image_sub">Select an option</string>
    <string name="pick_from_gallery">Select from Gallery</string>
    <string name="use_camera">Use Camera</string>


    <!-- TRIP STYLE -->
    <string-array name="trip_style_array">
        <item><font fgcolor="#FF000000">Solo</font></item>
        <item><font fgcolor="#FF000000">Couple</font></item>
        <item><font fgcolor="#FF000000">Family</font></item>
        <item><font fgcolor="#FF000000">Group</font></item>
    </string-array>

</resources>