<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="@dimen/width_0"
            android:layout_height="wrap_content"
            android:background="@drawable/white_card_background"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/selectCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_16"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/card_view_background"
                    android:paddingStart="@dimen/padding_10"
                    android:paddingEnd="@dimen/padding_10"
                    android:paddingTop="@dimen/padding_30"
                    android:paddingBottom="@dimen/padding_30">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/location"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/margin_7"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="@dimen/margin_20"
                        android:layout_gravity="center_vertical">

                        <TextView
                            style="@style/TextAppearance.BodyText1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/where_to"/>

                        <TextView
                            android:id="@+id/selecedCity"
                            style="@style/TextAppearance.BodyText1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_city"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/margin_3"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_10"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/selectStartDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:background="@drawable/card_view_background"
                        android:paddingStart="@dimen/padding_5"
                        android:paddingEnd="@dimen/padding_5"
                        android:paddingTop="@dimen/padding_20"
                        android:paddingBottom="@dimen/padding_20"
                        android:layout_marginEnd="@dimen/margin_5">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/calendar_blank"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/margin_5"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="@dimen/margin_5"
                            android:layout_gravity="center_vertical">

                            <TextView
                                style="@style/TextAppearance.BodyText1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/start_date"/>

                            <TextView
                                android:id="@+id/selectedStartDate"
                                style="@style/TextAppearance.BodyText1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/enter_date"
                                android:textStyle="bold"
                                android:textSize="@dimen/subtitle_text_size_14"
                                android:layout_marginTop="@dimen/margin_3"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/selectEndDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:background="@drawable/card_view_background"
                        android:paddingStart="@dimen/padding_5"
                        android:paddingEnd="@dimen/padding_5"
                        android:paddingTop="@dimen/padding_20"
                        android:paddingBottom="@dimen/padding_20"
                        android:layout_marginStart="@dimen/margin_5">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/calendar_blank"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/margin_5"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="@dimen/margin_5"
                            android:layout_gravity="center_vertical">

                            <TextView
                                style="@style/TextAppearance.BodyText1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/end_date"/>

                            <TextView
                                android:id="@+id/selectedEndDate"
                                style="@style/TextAppearance.BodyText1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/enter_date"
                                android:textStyle="bold"
                                android:textSize="@dimen/subtitle_text_size_14"
                                android:layout_marginTop="@dimen/margin_3"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/createTrip"
                    style="@style/Widget.GoPaddi.Button.Main"
                    android:text="@string/create_trip"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_10"
                    app:layout_constraintTop_toBottomOf="@id/tripDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </LinearLayout>


        </LinearLayout>


        <!--- MAIN GUIDELINE -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@integer/guidelineStart" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@integer/guidelineEnd" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
